# igreat

./: AUTHORS  Makefile.am  Makefile.in  README.md  configure  configure.ac  giati.cfg
src/: Makefile.am  Makefile.in  arpa.c  arpa.h  arpa2tr.c  automaton.c  automaton.h  auxiliar.c  auxiliar.h  basicform.c  basicform.h  compound.c  compound.h  fsm.c  fsm.h  giati.c  giati.h  hash.c  hash.h  l2w.c  l2w.h  local.c  local.h  op.c  op.h  parse.c  parse.h  refx.c  simplex.c  simplex.h
