#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([igreat], [0.3.1beta], [jgonzalez@dsic.upv.es])
AM_INIT_AUTOMAKE($PACKAGE_TARNAME,$PACKAGE_VERSION)

AC_CONFIG_SRCDIR([src/giati.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
