## Makefile.am -- Process this file with automake to produce Makefile.in
LDADD = -lm
bin_PROGRAMS = giati local refx simplex arpa2tr
giati_SOURCES = giati.c op.c auxiliar.c hash.c basicform.c fsm.c compound.c automaton.c arpa.c l2w.c
local_SOURCES = local.c op.c auxiliar.c hash.c basicform.c fsm.c l2w.c parse.c arpa.c
refx_SOURCES = refx.c op.c auxiliar.c hash.c basicform.c fsm.c l2w.c parse.c arpa.c
simplex_SOURCES = simplex.c nrutil.c op.c auxiliar.c hash.c basicform.c fsm.c l2w.c parse.c arpa.c
arpa2tr_SOURCES = arpa2tr.c op.c auxiliar.c hash.c basicform.c fsm.c l2w.c parse.c arpa.c
#AM_LDFLAGS= -lm
EXTRA_DIST = giati.h refx.h op.h auxiliar.h hash.h basicform.h fsm.h compound.h automaton.h arpa.h l2w.h parse.h nrutil.h simplex.h local.h
#giati_LDADD = -lm
#local_LDADD = -lm
#refx_LDADD = -lm
#simplex_LDADD = -lm
#arpa2tr_LDADD = -lm
